# app

./: .clang-format  CMakeLists.txt  CMakePresets.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
src/: main.cpp
tests/: CMakeLists.txt
